--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -19,8 +19,9 @@ header {
   display: flex;
   align-items: flex-start;
   cursor: pointer;
-  margin-top: -28px;
+  margin-top: -20px;
   margin-left: -48px;
+  font-size: 12px;
 }
 
 .listing {
